@@ -1,0 +1,5 @@
+# source nodejs-setenv.sh
+NODEJS_HOME=/usr/local/nodejs/latest
+export PATH=$PATH:$NODEJS_HOME/bin
+
+PS1=(nodejs-enabled)$PS1
